ChangeLog for ARQ
=================
(the list covers new features and refinements.  See ASF JIRA for details of bugs fixed) 


==== Jena 2.10.0

+ Consolidation of versions numbers.
+ Command line SPARQL query reads all data formats (triples and quads) for --data 

* JENA-379 : Incorrect results from a property paths with same subject and object variable.  
+ Introduce RDFParserOutput as output interface for parsers (was Sink<Triple> or Sink<Quad>)
  Assorted implementations of this new interface
+ RIOT - internal reorganisation moving to org.apache.jena.riot.
+ Remove the partial migration support for old-style SPARQL submission update forms.
+ Update Turtle/Trig parsers for prefixed name details in RDF 1.1
  Add %-sequences, \char sequences and ':' to local part of prefixed names.
  NB.  The characters 123. are now an integer 123 and a DOT; they were a decimal, and no DOT.  
+ RIOT tokenizing now records the subtokens for language and datatype literals.   
+ JENA-345 : execConstructTriples() now excludes malformed triples (e.g. literal subjects) from it's output
+ Internal reorgansiation of packages
  org.openjena.atlas moved to org.apache.jena.atlas
+ PipedRDFStream and PipedRDFIterator replace RIOTParserPuller as method for getting
  an iterator over parser output
+ PrefixMap is now an interface
  Use PrefixMapFactory as the primary means of creating prefix maps
  Abbreviation performance for common namespace patterns (/ or # terminated) much improved
+ New FastAbbreviatingPrefixMap, can be much faster for abbreviation when namespaces
  do not follow common patterns
+ JENA-330 : Streaming support for SPARQL Update queries and streaming support for quads in INSERT DATA / DELETE DATA queries
  (Note to 3rd party storage engine implementers, the internal API for UpdateEngine has changed, see UpdateEngineMain or
  UpdateEngineNonStreaming for example of the new design)
+ SPARQL Update execution no longer supports setting an initial binding

==== ARQ 2.9.4
