@@ -16,12 +16,12 @@
  * limitations under the License.
  */
 
-package org.apache.jena.web.impl;
+package org.apache.jena.web;
 
-import org.apache.jena.web.DatasetAccessor ;
 
 import com.hp.hpl.jena.graph.Graph ;
 import com.hp.hpl.jena.graph.Node ;
+import com.hp.hpl.jena.query.DatasetAccessor ;
 import com.hp.hpl.jena.rdf.model.Model ;
 import com.hp.hpl.jena.rdf.model.ModelFactory ;
 
